# fraud-detection-project

./: .gitignore  prepare_data.py  pyproject.toml
notebooks/: 0_exploration.ipynb  1_rando_forest.ipynb
